# pico-projects

./: .gitignore  CMakeLists.txt  README.md  devicetree.h  lv_conf.h  main.c
.github/workflows/: ci_build.yml
blink/: CMakeLists.txt  main.c
clock/: CMakeLists.txt  sw_clock.c  sw_clock.h
gpio/: CMakeLists.txt  sw_gpio.c  sw_gpio.h
hal/: CMakeLists.txt  hal_common.h  hal_lvgl.c  hal_lvgl.h
helloworld/: CMakeLists.txt  main.c
lcd/: CMakeLists.txt  lcd.c  lcd.h  sw_lcd.c  sw_lcd.h
spi/: CMakeLists.txt  sw_spi.c  sw_spi.h
timer/: CMakeLists.txt  sw_timer.c  sw_timer.h
uart/: CMakeLists.txt  sw_uart.c  sw_uart.h
watch/: CMakeLists.txt  devicetree.h  lv_conf.h  main.c
watch/clock/: CMakeLists.txt
watch/display/: lcd.c  lcd.h
watch/hal/: CMakeLists.txt  hal_lcd.c  hal_lcd.h  hal_timer.c  hal_timer.h  hal_uart.c  hal_uart.h
watch/lcd/: CMakeLists.txt  lcd.c  lcd.h  sw_lcd.c
watch/lvgl/: CMakeLists.txt
watch/lvgl/env_support/cmake/: custom.cmake
watch/spi/: sw_spi.c  sw_spi.h
watch/timer/: CMakeLists.txt  sw_timer.c  sw_timer.h
