cmake_minimum_required(VERSION 3.12)
include(${PICO_SDK_PATH}/external/pico_sdk_import.cmake)
include_directories("clock")
include_directories("gpio")
include_directories("lcd")
include_directories("lvgl")
include_directories("spi")
include_directories("timer")
include_directories("uart")
project(watch C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(${PROJECT_NAME} main.c)
add_subdirectory(clock)
add_subdirectory(gpio)
add_subdirectory(lcd)
add_subdirectory(lvgl)
add_subdirectory(spi)
add_subdirectory(timer)
add_subdirectory(uart)
pico_add_extra_outputs(${PROJECT_NAME})
pico_enable_stdio_uart(${PROJECT_NAME} 1)
target_link_libraries(${PROJECT_NAME} pico_stdlib sw_clock sw_gpio lvgl sw_spi sw_timer sw_uart)