cmake_minimum_required(VERSION 3.12)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
include_directories("lcd")
include_directories("hal")
include_directories("lvgl")
include_directories("timer")
project(watch C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(${PROJECT_NAME} main.c)
add_subdirectory(lcd)
add_subdirectory(lvgl)
add_subdirectory(hal)
add_subdirectory(timer)
pico_add_extra_outputs(${PROJECT_NAME})
pico_enable_stdio_uart(${PROJECT_NAME} 1)
target_link_libraries(${PROJECT_NAME} pico_stdlib lcd lvgl hal)